--- a/blueprints.yaml
+++ b/blueprints.yaml
@@ -8,7 +8,7 @@ author:
   url: http://gulinux.net
 homepage: https://github.com/GuLinux/grav-plugin-flickr
 keywords: flickr, media
-#bugs: https://github.com/getgrav/grav-plugin-shortcode-ui/issues
+bugs: https://github.com/GuLinux/grav-plugin-flickr/issues
 license: GPL3
 
 dependencies:
