--- a/blueprints.yaml
+++ b/blueprints.yaml
@@ -9,7 +9,7 @@ author:
 homepage: https://github.com/GuLinux/grav-plugin-flickr
 keywords: flickr, media
 bugs: https://github.com/GuLinux/grav-plugin-flickr/issues
-license: GPL3
+license: GPLv3
 
 dependencies:
   - shortcode-core
