Fix wrong flickr link for single photo; other minor fixes

--- a/blueprints.yaml
+++ b/blueprints.yaml
@@ -38,7 +38,7 @@ form:
     flickr_api_secret:
       type: text
       size: medium
-      label: Flickr API Key
+      label: Flickr API Secret
       validate:
         required: true
     flickr_user_id:
